minikube/backend.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: backend
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: backend 
  template: 
    metadata: 
      labels: 
        app: backend 
    spec: 
      containers: 
      - name: backend
        image: kurtay/k8s-dev-be
        ports: 
        - containerPort: 3000 
        imagePullPolicy: Always
---
apiVersion: v1 
kind: Service 
metadata: 
  name: backend
spec:
  selector: 
    app: backend
  ports: 
  - name: node-port
    port: 3000
    targetPort: 3000
    protocol: TCP
